# raytracing-in-a-weekend

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: hittable.h  main.cl  rand.cl  sphere.h  structs.h
opencl-include/: main.cl  structs.h
src/: camera.hpp  color.h  color.hpp  main.c  main.cl  main.cpp  opengl_test.h  ray.h  ray.hpp  rtweekend.h  rtweekend.hpp  vec3.h  vec3.hpp
src/hittable/: hittable.h  hittable.hpp  hittable_list.h  hittable_list.hpp  sphere.h  sphere.hpp
src/material/: material.hpp
